fixed alignment on birthday and contacts widget

--- a/client/src/components/dashboard/maindashboard/widgets/_contact_carousel.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_contact_carousel.scss
@@ -53,8 +53,8 @@
   @include flex-center;
   flex-direction: column;
   .contact_four_image {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     border-radius: 50px;
     background-color: gray;
     margin-bottom: 5px;
@@ -68,8 +68,8 @@
   @include flex-center;
   flex-direction: column;
   .contact_five_image {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     border-radius: 50px;
     background-color: gray;
     margin-bottom: 5px;
