--- a/client/src/components/dashboard/maindashboard/widgets/_widget-announcements.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-announcements.scss
@@ -11,6 +11,8 @@
 }
 
 .widget_announcements_display {
+  @include flex-center;
+  flex-direction: column;
   margin-top: 10px;
 }
 
@@ -19,7 +21,7 @@
   margin-top: 5px;
   margin-left: 20px;
   padding: 10px;
-  width: 85%;
+  width: 20vw;
   height: 1vh;
   color: $primary;
   border-radius: 8px;
@@ -31,7 +33,7 @@
   margin-top: 5px;
   margin-left: 20px;
   padding: 10px;
-  width: 85%;
+  width: 20vw;
   height: 1vh;
   color: $primary;
   border-radius: 8px;
@@ -43,7 +45,7 @@
   margin-top: 5px;
   margin-left: 20px;
   padding: 10px;
-  width: 85%;
+  width: 20vw;
   height: 1vh;
   color: $primary;
   border-radius: 8px;
